add functionality for a computer player

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
   <h1>Tic Tac Toe!</h1>
   <div id="displayMessage">Player One's Turn</div>
   <div id="gameBoard">
-    <div id="0" class="gameBoardBox" onClick= "displayController(this.id)"></div><div id="1" class="gameBoardBox" onClick= "displayController(this.id)"></div><div id="2" class="gameBoardBox" onClick= "displayController(this.id)"></div>
-    <div id="3" class="gameBoardBox" onClick= "displayController(this.id)"></div><div id="4" class="gameBoardBox" onClick= "displayController(this.id)"></div><div id="5" class="gameBoardBox" onClick= "displayController(this.id)"></div>
-    <div id="6" class="gameBoardBox" onClick= "displayController(this.id)"></div><div id="7" class="gameBoardBox" onClick= "displayController(this.id)"></div><div id="8" class="gameBoardBox" onClick= "displayController(this.id)"></div>
+    <div id="0" class="gameBoardBox"></div><div id="1" class="gameBoardBox"></div><div id="2" class="gameBoardBox"></div>
+    <div id="3" class="gameBoardBox"></div><div id="4" class="gameBoardBox"></div><div id="5" class="gameBoardBox"></div>
+    <div id="6" class="gameBoardBox"></div><div id="7" class="gameBoardBox"></div><div id="8" class="gameBoardBox"></div>
+  </div>
+  <div class="buttonContainer">
+    <button id="computerMove">Click for the computer.</button>
   </div>
   <script src="script.js"></script>
 </body>
