add simple styling to game

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Comforter+Brush">
 
 </head>
 
@@ -21,7 +23,8 @@
     <div id="6" class="gameBoardBox"></div><div id="7" class="gameBoardBox"></div><div id="8" class="gameBoardBox"></div>
   </div>
   <div class="buttonContainer">
-    <button id="computerMove">Click for the computer.</button>
+    <button id="computerMove">Computer Turn</button>
+    <button onclick="location.reload()">Reset Game</button>
   </div>
   <script src="script.js"></script>
 </body>
